# TT-capstone-project

./: .gitignore  pyproject.toml
notebooks/v1/: 1-cleaning.ipynb  2-ml.ipynb  2-ml_experiment.ipynb  2-ml_experiment2.ipynb  3-ml.ipynb  4-presentation.ipynb
presentation/: appendix.py  demo.py  main.py
