[project]
name = "tt-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.7",
    "ipykernel>=6.29.5",
    "lightgbm>=4.5.0",
    "optuna>=4.2.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "tqdm>=4.67.1",
    "xgboost>=2.1.3",
]
